--- a/rhabit-api/config/database.yml
+++ b/rhabit-api/config/database.yml
@@ -7,7 +7,7 @@
 default: &default
   adapter: mysql2
   username: root
-  password: 12345678
+  password: PASSWORD HERE
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
